<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:scrollbars="none">

    <!-- Titre de l'écran -->
    <TextView
        android:id="@+id/titleTextView"
        android:text="Ajouter un Spot"
        android:fontFamily="@font/beaches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:textColor="@color/surf_blue"
        />

    <!-- Champ pour le nom du spot -->
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_name"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="48dp"/>

    <!-- Champ pour la localisation -->
    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_location"
        android:padding="8dp"
        android:layout_marginBottom="8dp"/>

    <!-- Champ pour le surf break -->
    <EditText
        android:id="@+id/surfBreakEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_surfBreak"
        android:padding="8dp"
        android:layout_marginBottom="8dp"/>

    <!-- Champ pour la difficulté -->
    <EditText
        android:id="@+id/difficultyEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_difficulty"
        android:padding="8dp"
        android:layout_marginBottom="8dp"/>

    <!-- Champ pour le début de la saison -->
    <EditText
        android:id="@+id/seasonStartEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_seasonStart"
        android:padding="8dp"
        android:layout_marginBottom="8dp"/>

    <!-- Champ pour la fin de la saison -->
    <EditText
        android:id="@+id/seasonEndEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_seasonEnd"
        android:padding="8dp"
        android:layout_marginBottom="8dp"/>

    <!-- Champ pour l'adresse -->
    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_address"
        android:padding="8dp"
        android:layout_marginBottom="16dp"/>

    <!-- Bouton pour sélectionner une image -->
    <Button
        android:id="@+id/selectImageButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="Choisir une image"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"/>

    <!-- ImageView pour afficher l'image sélectionnée -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/placeholder"
        android:layout_marginTop="24dp"/>

    <!-- Espace vide pour pousser le bouton "Ajouter Spot" tout en bas -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- Bouton pour ajouter le spot -->
    <Button
        android:id="@+id/addButton"
        android:backgroundTint="@color/surf_blue"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/ajouter_spot_button"
        />
</LinearLayout>
